MEDIUM: ui: Add "assets" directory to file paths

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Donut - JavaScript Animation</title>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="icon shortcut" href="images/logo.png">
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="icon shortcut" href="assets/images/logo.png"/>
 </head>
 <body>
     <!-- Canvas -->
@@ -14,7 +14,7 @@
 
     <!-- Menu toggle -->
     <button class="menu-toggle" onclick="toggleMenu()">
-        <img src="images/bars-solid.svg"/>
+        <img src="assets/icons/bars-solid.svg"/>
     </button>
 
     <!-- Actions -->
@@ -30,6 +30,6 @@
     </div>
 
     <!-- Load Js -->
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
