--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta http-equiv="refresh" content="0;url=https://donut.sylvain.pro"/>
     <title>Redirection to Donut...</title>
-    <link rel="icon shortcut" href="https://donut.sylvain.pro/images/logo.png"/>
+    <link rel="icon shortcut" href="https://donut.sylvain.pro/assets/images/logo.png"/>
 </head>
 <body>
 </body>
